trunk/Archive2/2b/9777ac40b8ef84/output
main.cpp: In function 'int main()':
main.cpp:5:14: error: expected primary-expression before '...' token
     char buf[...];
              ^
main.cpp:5:14: error: expected ']' before '...' token
main.cpp:7:14: error: 'buf' was not declared in this scope
     snprintf(buf, "%d-blah_%d-blah_%N", i, j);
              ^
